--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             Lorem ipsum dolor sit amet, consectetur adipisicing elit.
         </p>
         <p>
-            <a href="http://purecss.io" class="pure-button pure-button-primary">Get Started</a>
+            <a href="javascript:alert('hello')" class="pure-button pure-button-primary">Get Started</a>
         </p>
     </div>
 </div>
