--- a/index.html
+++ b/index.html
@@ -49,7 +49,9 @@
                 </h3>
                 <p>
                     Phasellus eget enim eu lectus faucibus vestibulum. Suspendisse sodales pellentesque elementum.
-                </p>
+                </p> 
+                <input type="number" id="input-number" placeholder="請輸入數字"> 
+                <button id="click-me-button"> 按我</button>
             </div>
             <div class="l-box pure-u-1 pure-u-md-1-2 pure-u-lg-1-4">
                 <h3 class="content-subhead">
@@ -145,6 +147,9 @@
     </div>
 
 </div>
+<script>
+    const clickmebutton = document.getElementById('click-me-button')
 
+</script>
 </body>
 </html>
